[tool.poetry]
name = "flask-get-main-color"
version = "0.1.0"
description = ""
authors = ["ebina4yaka <4yaka3bina@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
Flask = "^1.1.2"
Pillow = "^8.0.1"
opencv-python = "^4.4.0"
scikit-learn = "^0.23.2"
numpy = "^1.19.4"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
